Add new content (4)

--- a/index.html
+++ b/index.html
@@ -135,7 +135,11 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>經歷 Experience</h2>
-        <p>(TBD) Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>(TBD)</p>
+        <ul>
+          <li><span><u>學術專長</u>：語言學、語意學、語用學、語言政策、田野調查、英語教學、社會語言學、應用語言學、地方創生與社會實踐（社區營造、跨領域整合與應用）</span></li>
+          <li><span><u>開設課程</u>：語言學概論、語意學、語用學、語音學、世界語言政策及語言流失、田野調查及問卷設計、英語及流行音樂、TED Talks、數位英語、台灣語言現況（前世與今生）、地方創生（理論與實務之應用）</span></li>
+        </ul>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -148,15 +152,14 @@
               <h4>國立清華大學語言學研究所博士</h4>
               <h6>Ph.D., Linguistics</h6>
               <p><em>National Tsing Hua University, Hsinchu City, Taiwan.</em></p>
-              <p>[Dissertation] A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</p>
-              <p>(TBD)</p>
+              <p>[Dissertation] <em>A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</em></p>
             </div>
 
             <div class="resume-item">
               <h4>靜宜大學英國語文學系碩士</h4>
               <h6>MA, English Language, Literature and Linguistics</h6>
               <p><em>Providence University, Taichung City, Taiwan.</em></p>
-              <p>[Thesis] Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</p>
+              <p>[Thesis] <em>Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</em></p>
             </div>
 
             <div class="resume-item">
@@ -179,30 +182,10 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Academic Expertise</h3>
-            <div class="resume-item pb-0">
-              <h4>語言學</h4>
-              <p><em>(TBD)</em></p>
-              <h4>語意學</h4>
-              <p><em>(TBD)</em></p>
-              <h4>語用學</h4>
-              <p><em>(TBD)</em></p>
-              <h4>語言政策</h4>
-              <p><em>(TBD)</em></p>
-              <h4>田野調查</h4>
-              <p><em>(TBD)</em></p>
-              <h4>英語教學</h4>
-              <p><em>(TBD)</em></p>
-              <h4>社會語言學</h4>
-              <p><em>(TBD)</em></p>
-              <h4>應用語言學</h4>
-              <p><em>(TBD)</em></p>
-              <h4>地方創生與社會實踐</h4>
-              <p><em>（社區營造、跨領域整合與應用）</em></p>
-            </div>
-
             <h3 class="resume-title">Academic Awards</h3>
             <div class="resume-item pb-0">
+              <h4>國立勤益科技大學推動研究發展績效獎</h4>
+              <p><em>(核心證照獎, 2023)</em></p>
               <h4>國科會獎勵博士候選人撰寫博士論文獎</h4>
               <p><em>Doctoral Dissertation Fellowships for the Humanities and Social Sciences</em></p>
               <p><em>（國科會 104-2420-H-007-008-DR, 2015）</em></p>
@@ -224,42 +207,28 @@
 
             <h3 class="resume-title">Licenses & Certificates</h3>
             <div class="resume-item pb-0">
+              <h4>Teaching Knowledge Test 劍橋英語教師認證</h4>
+              <h6>TKT Module 2 | Band 2 Cambridge English</h6>
+              <p><em>證書編號：231TW0400002</em></p>
+              <h4>AIL 人工智慧專業級證照</h4>
+              <h6>Artificial Intelligence Literacy Certification Programs | Expert</h6>
+              <p><em>證書編號：24-A-AIL-00-ES-886000701</em></p>
+              <h4>AIL 人工智慧基礎級證照</h4>
+              <h6>Artificial Intelligence Literacy Certification Programs | Fundamentals</h6>
+              <p><em>證書編號：22-A-AIL-00-FD-886001216</em></p>
+              <h4>新型研發專利</h4>
+              <h6>新型名稱：外語口說明分系統</h6>
+              <p><em>專利編號：新型第M657972號</em></p>
+              <p><em>專利權期間：2024.07.11 - 2033.12.05</em></p>
               <h4>中等學校英文科教師證書</h4>
               <p><em>(TBD)</em></p>
               <h4>教育部閩南語語言能力認證 (中高級)</h4>
               <p><em>(TBD)</em></p>
             </div>
-
-            <h3 class="resume-title">Available Courses</h3>
-            <div class="resume-item pb-0">
-              <h4>語言學概論</h4>
-              <p><em>(TBD)</em></p>
-              <h4>社會語言學導論 (專題)</h4>
-              <p><em>(TBD)</em></p>
-              <h4>世界語言政策及語言流失</h4>
-              <p><em>(TBD)</em></p>
-              <h4>田野調查及問卷設計</h4>
-              <p><em>(TBD)</em></p>
-              <h4>語意（用）學</h4>
-              <p><em>(TBD)</em></p>
-              <h4>語音學</h4>
-              <p><em>(TBD)</em></p>
-              <h4>英語及流行音樂</h4>
-              <p><em>(TBD)</em></p>
-              <h4>TED Talks</h4>
-              <p><em>(TBD)</em></p>
-              <h4>數位英語</h4>
-              <p><em>(TBD)</em></p>
-              <h4>台灣語言現況：前世與今生</h4>
-              <p><em>(TBD)</em></p>
-              <h4>地方創生：理論與實務之應用</h4>
-              <p><em>(TBD)</em></p>
-            </div>
-
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Work Experience</h3>
+            <h3 class="resume-title">Work (Full-time)</h3>
             <div class="resume-item">
               <h4>國立勤益科技大學應用英語系 | 助理教授</h4>
               <h5>2022 - Present</h5>
@@ -342,7 +311,7 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Part-time Experience</h3>
+            <h3 class="resume-title">Work (Part-time)</h3>
             <div class="resume-item">
               <h4>國立清華大學語言學研究所 | 講師</h4>
               <h5>2011 - 2013</h5>
@@ -367,8 +336,7 @@
               <h4>國立清華大學外語學系 | 講師</h4>
               <h5>2010 - 2010</h5>
               <ul>
-                <li>Contrastive Analysis and Error Analysis</li>
-                <li>Syntax</li>
+                <li>Contrastive Analysis and Error Analysis, Syntax</li>
               </ul>
             </div>
 
@@ -376,8 +344,7 @@
               <h4>靜宜大學英國語文學系 | 講師</h4>
               <h5>2007 - 2008</h5>
               <ul>
-                <li>Linguistics</li>
-                <li>English listening and speaking</li>
+                <li>Linguistics, English listening and speaking</li>
               </ul>
             </div>
 
@@ -403,43 +370,42 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
-              <h4 class="title"><a href="academic-details.html" class="stretched-link">學術研究</a></h4>
+              <h4 class="title"><a href="publication-details.html" class="stretched-link">學術發表</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
-          <!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
-              <h4 class="title"><a href="special-details.html" class="stretched-link">特殊經歷</a></h4>
+              <h4 class="title"><a href="paticipation-details.html" class="stretched-link">學術參與</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
-              <h4 class="title"><a href="teaching-details.html" class="stretched-link">教學經歷</a></h4>
+              <h4 class="title"><a href="project-details.html" class="stretched-link">研究計畫</a></h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Magni Dolores</a></h4>
+              <h4 class="title"><a href="cooperation-details.html" class="stretched-link">產學合作</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Nemo Enim</a></h4>
+              <h4 class="title"><a href="teaching-details.html" class="stretched-link">教學經歷</a></h4>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
@@ -447,7 +413,7 @@
               <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
         </div>
 
