--- a/publication-details.html
+++ b/publication-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Academic)</title>
+  <title>楊真宜 Chen-Yi Yang (Publications)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -71,41 +71,23 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Academic Details</h1>
+        <h1 class="mb-2 mb-lg-0">Publications Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Academic Details</li>
+            <li class="current">Publications Details</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Academic Details Section -->
+    <!-- Publications Details Section -->
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
-            <h3>學術研究 Academic Research</h3>
+            <h3>學術發表 Acdamic Publications</h3>
             <hr>
-            <h5>
-              研究計畫 Research Projects
-            </h5>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>(TBD) Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>(TBD) Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>(TBD) Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-
-            <h5>
-              產學合作計畫 Industry-university Cooperation Projects
-            </h5>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>(TBD) Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>(TBD) Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>(TBD) Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-
             <h5>
               期刊論文 Journal Articles
             </h5>
@@ -113,13 +95,6 @@
               <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi & Lee, Szu-Hsien. The Interaction and Reflection of Soundscape Listening and Local Innovation in Old Zuoying。Sun Yat-sen Journal of Humanities，National Sun Yat-sen University。（審查中）</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2017). Taiwan's New Southbound Policy and Cultivation of Proficient Language Speakers of Southeast Asian Languages. Taiwan International Studies Quarterly, Vol. 13. No. 4, pp. 143-74.</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2017). A Study on the Current Situation and Role of the Language of New Immigrants’ Children in Taiwan. Languages and International Studies, 17, pp. 127-74. doi:10.3966/181147172017060017005</span></li>
-            </ul>
-            
-            <h5>
-              專書篇章 Book Chapters
-            </h5>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2008) Teaching and learning an endangered language in Taiwan, In Documenting and Revitalizing Austronesian Language. Eds. By D. Victoria Rau & Margaret Florey, special volume for Language Documentation and Conservation, University of Hawai'i. 162-188. http://nflrc.hawaii.edu/ldc/sp01/ (NSC-95-2411-126-007). ISBN 978-0-8248-3309-1</span></li>
             </ul>
                         
             <h5>
@@ -149,12 +124,10 @@
             </ul>
 
             <h5>
-              專題演講 Invited Talks
+              專書篇章 Book Chapters
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>A Sociolinguistic Description of Language Change in Taiwan. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. May 12, 2020.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>A Survey of Junior High Students' Language Proficiency, Use and Attitude in Taiwan: Mandarin Chinese, Indigenous Languages and English. Linguistics Department Tuesday Seminar. University of Hawai'i at Mānoa, Hawai'i, USA, May 6, 2014.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Language is Not Only a Language. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. October 2010.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2008) Teaching and learning an endangered language in Taiwan, In Documenting and Revitalizing Austronesian Language. Eds. By D. Victoria Rau & Margaret Florey, special volume for Language Documentation and Conservation, University of Hawai'i. 162-188. http://nflrc.hawaii.edu/ldc/sp01/ (NSC-95-2411-126-007). ISBN 978-0-8248-3309-1</span></li>
             </ul>
 
             <h5>
@@ -173,22 +146,18 @@
             </ul>
 
             <h5>
-              研究計畫參與 Research Projects Participation
+              專題演講 Invited Talks
             </h5>
-            <ul>             
-              <li><i class="bi bi-check-circle"></i> <span>科技部人文創新與社會實踐計畫【新竹智慧城鄉創生計畫：地方活力與能力建構】(2021) | 國立清華大學 (MOST 108-2420-H-007-010-HS1)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>科技部人文創新與社會實踐計畫【灣岸創生：高雄過渡社區的記憶再現與創新轉型】(2018-2020) | 國立中山大學 (MOST 107-2420-H-110-004-HS1)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Grammaticalization Cycles of Nasal Diminutive Suffixes in Chinese【鼻化小稱語法化輪迴】(2015) | 國科會 (NSC102-2410-H-007-023-MY2)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>國科會補助博士生赴國外研究成果報告【台灣年輕人的語言能力、使用與認同之探究】(2014) | 國科會 (NSC102-2917-I-007-026)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>A Study of the Indigenous Language Teaching Situation in Elementary and Junior High Schools in Taiwan【臺灣地區國民中小學本土語言教學現況之整合型研究】(2011-2013) | 國家教育研究院 (NAER-100-11-A-1-01-00-2-01)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Tsing-Hua Corpus and Study of Spoken Chinese: part II【清華語料庫與華語口語研究】(2009-2011) | 教育部 (99N2922E1)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>The Study of the Diachronic variation of Southern Min (Taiwanese)【台灣閩南語的歷時演變】(2009-2010) | 國科會 (NSC98-2923-H-007-001-MY3)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Preservation of Endangered Language-Yami【瀕危雅美語之保存暨典藏、E-learning網站建構】(2006-2007) | 國科會、原民會 (NSC95-2411-H-126 -007) http://yamiproject.cs.pu.edu.tw/yami , http://yamiproject.cs.pu.edu.tw/elearn/?&lang=zhtw</span></li>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>A Sociolinguistic Description of Language Change in Taiwan. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. May 12, 2020.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>A Survey of Junior High Students' Language Proficiency, Use and Attitude in Taiwan: Mandarin Chinese, Indigenous Languages and English. Linguistics Department Tuesday Seminar. University of Hawai'i at Mānoa, Hawai'i, USA, May 6, 2014.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Language is Not Only a Language. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. October 2010.</span></li>
             </ul>
+
         </div>
       </div>
 
-    </section><!-- /Academic Details Section -->
+    </section><!-- /Publications Details Section -->
 
   </main>
 
