--- a/paticipation-details.html
+++ b/paticipation-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Special)</title>
+  <title>楊真宜 Chen-Yi Yang (Paticipation)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -71,21 +71,23 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Special Details</h1>
+        <h1 class="mb-2 mb-lg-0">Paticipation Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Special Details</li>
+            <li class="current">Paticipation Details</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Special Details Section -->
+    <!-- Paticipation Details Section -->
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
+            <h3>學術參與 Acdamic Participation</h3>
+            <hr>
             <h5>
               委員擔任
             </h5>
@@ -95,7 +97,7 @@
         </div>
       </div>
 
-    </section><!-- /Special Details Section -->
+    </section><!-- /Paticipation Details Section -->
 
   </main>
 
