--- a/teaching-details.html
+++ b/teaching-details.html
@@ -86,9 +86,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
-            <h5>
-              教學經歷 Teaching Experiences
-            </h5>
+            <h3>教學經歷 Teaching Experiences</h3>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span><b>[2017 Fall, TA]</b> Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
               <li><i class="bi bi-check-circle"></i> <span><b>[2016, Fall, TA]</b> Sociolinguistics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
