--- a/cooperation-details.html
+++ b/cooperation-details.html
@@ -86,9 +86,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
-            <h5>
-              產學合作計畫 Industry-university Cooperation Projects
-            </h5>
+            <h3>產學合作計畫 Industry-university Cooperation Projects</h3>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>英語補習教育實務人才培育計畫(互動美語北屯分公司) | 計畫主持人 | 台中市私立希伯崙文股份有限公司 | 2024 - 2025</span></li>
               <li><i class="bi bi-check-circle"></i> <span>英語補習教育實務人才培育計畫(佳音太平分校) | 計畫主持人 | 台中市私立喬伊美語短期補習班 | 2024 - 2025</span></li>
