--- a/index.html
+++ b/index.html
@@ -185,24 +185,24 @@
             <h3 class="resume-title">Academic Awards</h3>
             <div class="resume-item pb-0">
               <h4>國立勤益科技大學推動研究發展績效獎</h4>
-              <p><em>(核心證照獎, 2023)</em></p>
+              <p>（<em>核心證照獎, 2023</em>）</p>
               <h4>國科會獎勵博士候選人撰寫博士論文獎</h4>
               <p><em>Doctoral Dissertation Fellowships for the Humanities and Social Sciences</em></p>
-              <p><em>（國科會 104-2420-H-007-008-DR, 2015）</em></p>
+              <p>（<em>國科會 104-2420-H-007-008-DR, 2015</em>）</p>
               <h4>國科會補助博士生赴國外研究「千里馬計畫」</h4>
               <p><em>Scholarship of the Graduate Students Study Abroad Program</em></p>
-              <p><em>（國科會 102-2917-I-007-026, 2012）</em></p>
+              <p>（<em>國科會 102-2917-I-007-026, 2012</em>）</p>
               <h4>語言學研究生獎學金</h4>
               <p><em>Scholarship of the Linguistic Graduate Students, The Language Training & Testing Center</em></p>
-              <p><em>（財團法人語言訓練測驗中心 LTTC, 2011）</em></p>
+              <p>（<em>財團法人語言訓練測驗中心 LTTC, 2011</em>）</p>
               <h4>文殊文教基金會獎學金</h4>
-              <p><em>（Scholarship, Wenshu culture and education foundation, 2010）</em></p>
+              <p>（<em>Scholarship, Wenshu culture and education foundation, 2010</em>）</p>
               <h4>文殊文教基金會獎學金</h4>
-              <p><em>（Scholarship, Wenshu culture and education foundation, 2009）</em></p>
+              <p>（<em>Scholarship, Wenshu culture and education foundation, 2009</em>）</p>
               <h4>年度最佳論文獎</h4>
-              <p><em>（Award of Annual MA thesis, Providence University, 2008）</em></p>
+              <p>（<em>Award of Annual MA thesis, Providence University, 2008</em>）</p>
               <h4>國際榮譽大使</h4>
-              <p><em>（International Honor Ambassador, Office of International Affairs, Providence University, 2008）</em></p>
+              <p>（<em>International Honor Ambassador, Office of International Affairs, Providence University, 2008</em>）</p>
             </div>
 
             <h3 class="resume-title">Licenses & Certificates</h3>
@@ -218,8 +218,7 @@
               <p><em>證書編號：22-A-AIL-00-FD-886001216</em></p>
               <h4>新型研發專利</h4>
               <h6>新型名稱：外語口說明分系統</h6>
-              <p><em>專利編號：新型第M657972號</em></p>
-              <p><em>專利權期間：2024.07.11 - 2033.12.05</em></p>
+              <p><em>專利編號：新型第 M657972 號、專利權期間：2024.07.11 - 2033.12.05</em></p>
               <h4>中等學校英文科教師證書</h4>
               <p><em>(TBD)</em></p>
               <h4>教育部閩南語語言能力認證 (中高級)</h4>
