--- a/project-details.html
+++ b/project-details.html
@@ -110,8 +110,9 @@
   <footer id="footer" class="footer position-relative light-background">
 
     <div class="container">
-      <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+      <div class="copyright text-center">
+        <p><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></p>
+        <br><p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
