Remove unused content

--- a/index.html
+++ b/index.html
@@ -193,10 +193,6 @@
               <h4>語言學研究生獎學金</h4>
               <p><em>Scholarship of the Linguistic Graduate Students, The Language Training & Testing Center</em></p>
               <p>（<em>財團法人語言訓練測驗中心 LTTC, 2011</em>）</p>
-              <h4>文殊文教基金會獎學金</h4>
-              <p>（<em>Scholarship, Wenshu culture and education foundation, 2010</em>）</p>
-              <h4>文殊文教基金會獎學金</h4>
-              <p>（<em>Scholarship, Wenshu culture and education foundation, 2009</em>）</p>
               <h4>年度最佳論文獎</h4>
               <p>（<em>Award of Annual MA thesis, Providence University, 2008</em>）</p>
               <h4>國際榮譽大使</h4>
@@ -225,7 +221,7 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Work (Full-time)</h3>
+            <h3 class="resume-title">Work</h3>
             <div class="resume-item">
               <h4>國立勤益科技大學應用英語系 | 助理教授</h4>
               <h5>2022 - Present</h5>
@@ -291,60 +287,6 @@
                 <li>(TBD)</li>
               </ul>
             </div>
-
-            <div class="resume-item">
-              <h4>新竹市愉躍文理補習班 | 國中部英語教師</h4>
-              <h5>2009 - 2012</h5>
-              <ul>
-                <li>(TBD)</li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>台中縣梧棲國中(日夜間部) | 英語科教師</h4>
-              <h5>2008 - 2009</h5>
-              <ul>
-                <li>(TBD)</li>
-              </ul>
-            </div>
-
-            <h3 class="resume-title">Work (Part-time)</h3>
-            <div class="resume-item">
-              <h4>國立清華大學語言學研究所 | 講師</h4>
-              <h5>2011 - 2013</h5>
-              <ul>
-                <li>Pragmatics</li>
-                <li>Sociolinguistics</li>
-                <li>Grammaticalization & Lexicalization</li>
-                <li>Seminar in Pragmatics</li>
-                <li>Discourse Analysis</li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>國立清華大學人文社會學系 | 講師</h4>
-              <h5>2012 - 2012</h5>
-              <ul>
-                <li>Introduction to Linguistics</li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>國立清華大學外語學系 | 講師</h4>
-              <h5>2010 - 2010</h5>
-              <ul>
-                <li>Contrastive Analysis and Error Analysis, Syntax</li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>靜宜大學英國語文學系 | 講師</h4>
-              <h5>2007 - 2008</h5>
-              <ul>
-                <li>Linguistics, English listening and speaking</li>
-              </ul>
-            </div>
-
           </div>
         </div>
       </div>
