Revise format for the content

--- a/index.html
+++ b/index.html
@@ -160,12 +160,6 @@
               <p>[Thesis] <em>Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</em></p>
             </div>
 
-            <div class="resume-item">
-              <h4>中國文化大學英國語文學系學士</h4>
-              <h6>BA, English Language and Literature</h6>
-              <p><em>Chinese Culture University, Taipei City, Taiwan.</em></p>
-            </div>
-
             <h3 class="resume-title">Oversea</h3>
 
             <div class="resume-item pb-0">
@@ -201,7 +195,7 @@
 
             <h3 class="resume-title">Licenses & Certificates</h3>
             <div class="resume-item pb-0">
-              <h4>Teaching Knowledge Test 劍橋英語教師認證</h4>
+              <h4><span style="text-transform: none">Teaching Knowledge Test</span> 劍橋英語教師認證</h4>
               <h6>TKT Module 2 | Band 2 Cambridge English</h6>
               <p><em>證書編號：231TW0400002</em></p>
               <h4>AIL 人工智慧專業級證照</h4>
@@ -214,9 +208,9 @@
               <h6>新型名稱：外語口說明分系統</h6>
               <p><em>專利編號：新型第 M657972 號、專利權期間：2024.07.11 - 2033.12.05</em></p>
               <h4>中等學校英文科教師證書</h4>
-              <p><em>(TBD)</em></p>
+              <p><em>教師證號：中字檢第 9800102 號</em></p>
               <h4>教育部閩南語語言能力認證 (中高級)</h4>
-              <p><em>(TBD)</em></p>
+              <p><em>證書編號：臺語字第 1000211385 號</em></p>
             </div>
           </div>
 
