Remove unused content

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <p>(TBD)</p>
         <ul>
           <li><span><u>學術專長</u>：語言學、語意學、語用學、語言政策、田野調查、英語教學、社會語言學、應用語言學、地方創生與社會實踐（社區營造、跨領域整合與應用）</span></li>
-          <li><span><u>開設課程</u>：語言學概論、語意學、語用學、語音學、世界語言政策及語言流失、田野調查及問卷設計、英語及流行音樂、TED Talks、數位英語、台灣語言現況（前世與今生）、地方創生（理論與實務之應用）</span></li>
+          <!-- <li><span><u>開設課程</u>：語言學概論、語意學、語用學、語音學、世界語言政策及語言流失、田野調查及問卷設計、英語及流行音樂、TED Talks、數位英語、台灣語言現況（前世與今生）、地方創生（理論與實務之應用）</span></li> -->
         </ul>
       </div><!-- End Section Title -->
 
@@ -205,7 +205,7 @@
               <h6>Artificial Intelligence Literacy Certification Programs | Fundamentals</h6>
               <p><em>證書編號：22-A-AIL-00-FD-886001216</em></p>
               <h4>新型研發專利</h4>
-              <h6>新型名稱：外語口說明分系統</h6>
+              <h6>新型名稱：外語口說評分系統</h6>
               <p><em>專利編號：新型第 M657972 號、專利權期間：2024.07.11 - 2033.12.05</em></p>
               <h4>中等學校英文科教師證書</h4>
               <p><em>教師證號：中字檢第 9800102 號</em></p>
