Fix URL bookmarks

--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename">Chen-Yi Yang</h1>
+      <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
     <div class="social-links text-center">
-      <span>楊真宜 (Karen)</span>
+      <span>楊真宜 博士 (Karen)</span>
     </div>
 
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="index.html" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Guides</a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="/#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="/#experiences"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
+        <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
+        <li><a href="/#guides"><i class="bi bi-images navicon"></i> Guides</a></li>
+        <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -128,7 +128,7 @@
     </section><!-- /About Section -->
 
     <!-- Experiences Section -->
-    <section id="resume" class="resume section light-background">
+    <section id="experiences" class="resume section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -287,8 +287,8 @@
 
     </section><!-- /Experiences Section -->
 
-    <!-- services Section -->
-    <section id="services" class="services section">
+    <!-- Achievements Section -->
+    <section id="achievements" class="Achievements Section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -352,10 +352,10 @@
 
       </div>
 
-    </section><!-- /services Section -->
+    </section><!-- /Achievements Section -->
 
     <!-- Guides Section -->
-    <section id="portfolio" class="portfolio section light-background">
+    <section id="guides" class="portfolio section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
